--- a/src/styles/LeftPanel.css
+++ b/src/styles/LeftPanel.css
@@ -138,3 +138,19 @@
   .customer-list::-webkit-scrollbar-thumb:hover {
     background-color: #555;
   }
+  .add-btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 8px 14px;
+    border: none;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: pointer;
+    margin-left: 10px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .add-btn:hover {
+    background-color: #45a049;
+  }
